Fix issue brand not showing

--- a/src/components/Reservations/MyReservations.css
+++ b/src/components/Reservations/MyReservations.css
@@ -11,7 +11,13 @@
 
 .myreserve-title {
     border: 1px solid lightblue;
-    box-shadow: 5px 5px 5px 10px  lightblue;
+    box-shadow: 3px 3px 3px 7px  lightblue;
     text-align: center;
+    border-radius: 2%;
+}
 
+.myreserve-table {
+    margin-top: 5%;
+    border: 1px solid black;
+    box-shadow: 3px 3px 3px 7px  lightblue;
 }
